2010-09-16  Dustin J. Mitchell <dustin@zmanda.com>
	* NEWS: mention improvements to amvault
	* server-src/amvault.pl: Add --autolabel=.. and --label-template=..
	* installcheck/amvault.pl: update tests
	* man/xml-source/amvault.8.xml: update manpage

2010-09-16  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amreport.pl: support more than one email address
	* installcheck/amreport.pl: change error message

2010-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Generate new label and reserved them
	  in the tapelist file.
	  Remove the "Will write new label `$LABEL' to new tape" message.
	* perl/Amanda/Taper/Scan.pm (make_new_tape_label): Canget the tapelist
	   in the argument.
	* perl/Amanda/Taper/Worker.pm: Don't update the tapelist file.
	* server-src/amvault.pl: Don't update the tapelist file.
	* installcheck/Amanda_Report.pl: Remove 'Will write ...' message.
	  installcheck/Amanda_Taper_Scribe.pl: Remove 'Will write ...' message.
	  installcheck/taper.pl: Remove 'Will write ...' message.

2010-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg: New Amanda::Tapelist API with lock.
	* perl/Amanda/Tapelist.pod: Document new API.
	  perl/Amanda/DB/Catalog.pm, perl/Amanda/Recovery/Planner.pm,
	  perl/Amanda/Taper/Scan.pm, perl/Amanda/Taper/Scan/traditional.pm,
	  perl/Amanda/Taper/Worker.pm, server-src/amcheckdump.pl,
	  server-src/amlabel.pl, server-src/amreport.pl,
	  server-src/amrmtape.pl, server-src/amvault.pl: Use new API
	* installcheck/Amanda_Logfile.pl,
	  installcheck/Amanda_Tapelist.pl, installcheck/amlabel.pl,
	  installcheck/amrmtape.pl, installcheck/amtape.pl,
	  installcheck/Amanda_Recovery_Clerk.pl: Fix for new API.

2010-09-16  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/xfer.c xfer-src/xfer.h: add xfer_atomic_swap_fd
	* xfer-src/xfer-element.c xfer-src/xfer-element.h: add
	  xfer_element_swap_input_fd and xfer_element_swap_output_fd and